logs/slfortigate.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/.libs_cffi_backend'...
Listing './lib/python3.5/site-packages/OpenSSL'...
Listing './lib/python3.5/site-packages/SoftLayer'...
Listing './lib/python3.5/site-packages/SoftLayer/CLI'...
Listing './lib/python3.5/site-packages/SoftLayer/CLI/cdn'...
Listing './lib/python3.5/site-packages/SoftLayer/CLI/config'...
Listing './lib/python3.5/site-packages/SoftLayer/CLI/dns'...
Listing './lib/python3.5/site-packages/SoftLayer/CLI/firewall'...
Listing './lib/python3.5/site-packages/SoftLayer/CLI/globalip'...
Listing './lib/python3.5/site-packages/SoftLayer/CLI/image'...
Listing './lib/python3.5/site-packages/SoftLayer/CLI/iscsi'...
Listing './lib/python3.5/site-packages/SoftLayer/CLI/loadbal'...
Listing './lib/python3.5/site-packages/SoftLayer/CLI/mq'...
Listing './lib/python3.5/site-packages/SoftLayer/CLI/nas'...
Listing './lib/python3.5/site-packages/SoftLayer/CLI/rwhois'...
Listing './lib/python3.5/site-packages/SoftLayer/CLI/server'...
Listing './lib/python3.5/site-packages/SoftLayer/CLI/snapshot'...
Listing './lib/python3.5/site-packages/SoftLayer/CLI/sshkey'...
Listing './lib/python3.5/site-packages/SoftLayer/CLI/ssl'...
Listing './lib/python3.5/site-packages/SoftLayer/CLI/subnet'...
Listing './lib/python3.5/site-packages/SoftLayer/CLI/ticket'...
Listing './lib/python3.5/site-packages/SoftLayer/CLI/virt'...
Listing './lib/python3.5/site-packages/SoftLayer/CLI/vlan'...
Listing './lib/python3.5/site-packages/SoftLayer/managers'...
Listing './lib/python3.5/site-packages/SoftLayer/testing'...
Listing './lib/python3.5/site-packages/SoftLayer/testing/fixtures'...
Listing './lib/python3.5/site-packages/SoftLayer/tests'...
Listing './lib/python3.5/site-packages/SoftLayer/tests/CLI'...
Listing './lib/python3.5/site-packages/SoftLayer/tests/CLI/modules'...
Listing './lib/python3.5/site-packages/SoftLayer/tests/managers'...
Listing './lib/python3.5/site-packages/SoftLayer-4.0.1.dist-info'...
Listing './lib/python3.5/site-packages/asn1crypto'...
Listing './lib/python3.5/site-packages/asn1crypto/_perf'...
Listing './lib/python3.5/site-packages/asn1crypto-0.24.0.dist-info'...
Listing './lib/python3.5/site-packages/cffi'...
Listing './lib/python3.5/site-packages/cffi-1.11.3.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/cryptography'...
Listing './lib/python3.5/site-packages/cryptography/hazmat'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/backends'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/backends/openssl'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/bindings'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/bindings/openssl'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/asymmetric'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/ciphers'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/kdf'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/twofactor'...
Listing './lib/python3.5/site-packages/cryptography/x509'...
Listing './lib/python3.5/site-packages/cryptography-2.1.4.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/ndg'...
Listing './lib/python3.5/site-packages/ndg/httpsclient'...
Listing './lib/python3.5/site-packages/ndg/httpsclient/test'...
Listing './lib/python3.5/site-packages/ndg/httpsclient/test/pki'...
Listing './lib/python3.5/site-packages/ndg/httpsclient/test/pki/ca'...
Listing './lib/python3.5/site-packages/ndg/httpsclient/test/scripts'...
Listing './lib/python3.5/site-packages/ndg_httpsclient-0.4.3.dist-info'...
Listing './lib/python3.5/site-packages/pexpect'...
Listing './lib/python3.5/site-packages/pexpect-3.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/prettytable-0.7.2.egg-info'...
Listing './lib/python3.5/site-packages/pyOpenSSL-17.5.0.dist-info'...
Listing './lib/python3.5/site-packages/pyasn1'...
Listing './lib/python3.5/site-packages/pyasn1/codec'...
Listing './lib/python3.5/site-packages/pyasn1/codec/ber'...
Listing './lib/python3.5/site-packages/pyasn1/codec/cer'...
Listing './lib/python3.5/site-packages/pyasn1/codec/der'...
Listing './lib/python3.5/site-packages/pyasn1/codec/native'...
Listing './lib/python3.5/site-packages/pyasn1/compat'...
Listing './lib/python3.5/site-packages/pyasn1/type'...
Listing './lib/python3.5/site-packages/pyasn1-0.4.2.dist-info'...
Listing './lib/python3.5/site-packages/pycparser'...
Listing './lib/python3.5/site-packages/pycparser/ply'...
Listing './lib/python3.5/site-packages/pycparser-2.18.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests/packages'...
Listing './lib/python3.5/site-packages/requests/packages/chardet'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/util'...
Listing './lib/python3.5/site-packages/requests-2.7.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/slfortigate'...
Compiling './lib/python3.5/site-packages/slfortigate/cli.py'...
***   File "./lib/python3.5/site-packages/slfortigate/cli.py", line 313
    print 'Checking permissions...'
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/slfortigate/configure.py'...
***   File "./lib/python3.5/site-packages/slfortigate/configure.py", line 182
    print "Login attempt "+str(loopTry)+" failed (pexpect index="+str(index)+")."
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/slfortigate/test'...
Listing './lib/python3.5/site-packages/slfortigate/test/integration'...
Compiling './lib/python3.5/site-packages/slfortigate/test/integration/int_test_configure_fortigate_tests.py'...
***   File "./lib/python3.5/site-packages/slfortigate/test/integration/int_test_configure_fortigate_tests.py", line 17
    print "You must set FG_UT_USER, FG_UT_PW and FG_UT_IP environment variables to run the integration tests."
                                                                                                             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/slfortigate/test/unit'...
Listing './lib/python3.5/site-packages/slfortigate-0.1.3.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
